--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "firebase": "^12.4.0",
+    "framer-motion": "^12.23.24",
     "localforage": "^1.10.0",
     "lucide-react": "^0.545.0",
     "match-sorter": "^8.1.0",
