--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.13.1",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "localforage": "^1.10.0",
