--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.13.1",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
+    "fuse.js": "^7.1.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.545.0",
     "match-sorter": "^8.1.0",
