--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^8.6.0",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.13.1",
     "firebase": "^12.4.0",
